# gates

./: .gitignore  Dockerfile  Procfile  apprunner.yaml  data_types.py  main.py  pyproject.toml  requirements.txt  restart_on_crash.py  zuliprc.focus.bot  zuliprc.gates.bot
api_docs/: add_emoji_reaction.md  delete_attachment.md  export_realm.md  get_all_channels.md  get_attachments.md  get_messages.md  get_realm.exports.md  get_users.md  openai.api.md  real_time_events_api.md  send_message.md  subscribe_to_channel.md  upload_file.md
logs/accountability-logs/: accountability-Q1-Week3-blakout1@icloud.com.json  (+3 more)
modules/: config.py  handlers.py  logging_config.py  secrets.py  signal_handler.py  thread_manager.py  utils.py
prompts/: accountability_summary.xml  memo.xml  transcribe.md
transcripts/: 59Etzj5gvsE-2025-01-21-18-42-39.md  59Etzj5gvsE_response.json  7LNyUbii0zw-2025-01-21-18-43-55.md  7LNyUbii0zw_response.json  9Q0qPTKVTJE-2025-01-21-18-45-47.md  9Q0qPTKVTJE_response.json  G1GuDyy9bTo-2025-01-21-18-38-42.md  G1GuDyy9bTo-2025-01-21-18-45-02.md  G1GuDyy9bTo_response.json  KHdA49FlQbg-2025-01-21-18-40-18.md  KHdA49FlQbg_response.json  LYxQbgAUzsQ-2025-01-21-18-44-28.md  LYxQbgAUzsQ_response.json  PSWUr5E_OKY-2025-01-21-18-46-46.md  PSWUr5E_OKY_response.json  Tuesday-21st-Jan-2025-01-22-05-54-09.md  Tuesday-21st-Jan_response.json  m7-4BB-VB2o-2025-01-21-18-43-30.md  m7-4BB-VB2o_response.json  nZhk5dIIv54.md  nZhk5dIIv54_response.json  test-cpts-log-2025-01-20-04-27-13.md  test-cpts-log_response.json
update-profile/: get_users.py
utils/: list_objects.py
(+6 files in other folders)
