[project]
name = "gates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.99",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "openai>=1.59.7",
    "pydantic>=2.10.5",
    "pytube>=15.0.0",
    "youtube-transcript-api>=0.6.3",
    "zulip>=0.9.0",
]
